# insight-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  get_papers.sh  ingest_papers.py  main.py  poll_status.py  pyproject.toml
api/: config.py  database.py  main.py
api/eval/: baseline_results.json  baseline_scores.json  golden_dataset.json  run_eval.py
api/graph/: neo4j_client.py
api/models/: document.py
api/routers/: documents.py  query.py
api/schemas/: document.py  kg.py  query.py
api/services/: document_service.py  file_service.py  kg_extractor.py  query_service.py
api/worker/: chunker.py  config.py  database.py  tasks.py  worker.py
api/worker/tasks/: test_task.py
tests/: conftest.py  test_config.py
tests/integration/: conftest.py  test_health.py  test_upload.py
tests/test_models/: test_document.py
tests/test_routers/: __init__.py  test_documents.py
tests/test_services/: test_document_service.py  test_file_service.py
tests/test_worker/: test_chunker.py  test_database.py  test_tasks.py
