[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "types-aiofiles>=25.1.0.20260409",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
namespace_packages = true
ignore_missing_imports = true
disable_error_code = ["misc"]
