[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "datasets>=4.8.5",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.73.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "neo4j>=6.1.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.27.2.3",
    "ragas>=0.4.3",
    "redis>=5.3.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "fakeredis>=2.35.1",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "testcontainers>=4.14.2",
    "types-aiofiles>=25.1.0.20260409",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM117"]

[tool.mypy]
python_version = "3.14"
namespace_packages = true
ignore_missing_imports = true
disable_error_code = ["misc"]
